--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
     "angular": "^1.8.3",
     "angular-ui-router": "^1.0.30",
     "bootstrap": "^5.2.3",
+    "eventemitter3": "^5.0.0",
     "popper.js": "^1.16.1",
     "toastr": "^2.1.4",
+    "url-toolkit": "^2.2.5",
+    "webworkify-webpack": "^2.1.5",
     "work": "^0.10.0"
   }
 }
