--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "popper.js": "^1.16.1",
     "toastr": "^2.1.4",
     "url-toolkit": "^2.2.5",
-    "webworkify-webpack": "^2.1.5",
-    "work": "^0.10.0"
+    "webworkify-webpack": "^2.1.5"
   }
 }
